applauncherd (0.24.0) unstable; urgency=low
   
  * Fixes: NB#234196 - QML Booster should be part of Nokia MeeGo in the API

 -- Juha Lintula <juha.lintula@nokia.com>  Fri, 18 Mar 2011 13:17:52 +0200

applauncherd (0.23.0) stable; urgency=low

  * Changes: invoker returns e-booster exit value
  * Changes: pipe between applauncher and boosters replaced by socket pair
  * Changes: Removed extra prctl(PR_SET_DUMPABLE, ...)
  * Changes: e-booster refactoring
  * Changes: removed compilation warnings
  * Changes: added user and api documentation as html in doc package
  * Fixes: NB#236033 - applauncherd does not build with gcc-4.5
  * Fixes: NB#234213 - The documentation of QML Booster is not good

 -- Alexey Shilov <alexey.shilov@nokia.com>  Thu, 10 Mar 2011 14:52:40 +0200

applauncherd (0.22.0) stable; urgency=low

  * Landscape splash-message implemented to protocol between invoker and launcher
  * Splash parameters communicated to mcompositor
  * Implemented: SWP#DUI-5052

 -- Alexey Shilov <alexey.shilov@nokia.com>  Tue, 08 Mar 2011 17:02:14 +0200


applauncherd (0.21.0) stable; urgency=low

  * Changes: Disable out of memory adjustments command line parameter added to invoker
  * Changes: AppData code refactoring 

 -- Juha Lintula <juha.lintula@nokia.com>  Fri, 08 Mar 2011 10:16:05 +0200

applauncherd (0.20.0) stable; urgency=low

  * Implemented: SWP#DUI-5045
  * Implemented: SWP#DUI-5050
  * New: Test for core dump generation with launched apps
  * Changes: add core dump test to red tests
  * New: Basic implementation of the e-booster.
  * New: Unit tests for EBooster added.
  * Changes: Indentation fixed / tabs removed from mdeclarativecache.cpp
  * Changes: e-booster tests added. Removed .launch from test applications and scripts

 -- Jussi Lind <jussi.lind@nokia.com>  Fri, 04 Mar 2011 13:59:58 +0200

applauncherd (0.19.0) stable; urgency=low
  
  * Splash command line parameters added to invoker
  * Implemented: SWP#DUI-5050