@@ -1,6 +1,7 @@
 applauncherd (0.24.0) unstable; urgency=low
-   
+ 
   * Fixes: NB#234196 - QML Booster should be part of Nokia MeeGo in the API
+  * Fixes: NB#231306 - Launcher slows down boot by loading irrelevant libs and not loading relevant ones
 
  -- Juha Lintula <juha.lintula@nokia.com>  Fri, 18 Mar 2011 13:17:52 +0200
 
